tests/Functional/Transformer/SyntaxErrorInTransformedClass/Target/SyntaxErrorClass.php
<?php

namespace Okapi\CodeTransformer\Tests\Functional\Transformer\SyntaxErrorInTransformedClass\Target;

class SyntaxErrorClass
{

}
